ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: grafana-test
  name: monitoring-best-of-the-grafana
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.best34.com
    http:
      paths:
      - backend:
          service:
            name: monitoring-grafana
            port:
              number: 80
        path: /
        pathType: Prefix
